--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -151,7 +151,7 @@
     "header_facility": "fasilitas",
     "header_ask-doctors": "tanya dokter",
     "header_clinics": "klinik",
-    "header_testimonials": "testimoni",
+    "header_testimonials": "Pengakuan",
     "banner_title": "Perawatan Medis Online",
     "banner_subtitle": "Dapatkan diagnosis, rencana perawatan, dan resep dari penyedia asli perawatan medis berkualitas.",
     "banner_search": "cari",
